src/parser/CmmParser.java
// Generated from C:/Users/Usuario/Desktop/dlp/lab/src/parser/Cmm.g4 by ANTLR 4.13.1
package parser;

    import ast.*;
    import ast.definitions.*;
    import ast.expressions.*;
    import ast.statements.*;
    import ast.types.*;
    import util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, INT_CONSTANT=37, ID=38, 
		DOUBLE_CONSTANT=39, CHAR_CONSTANT=40, WS=41;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_funDefinition = 2, RULE_varDefinitions = 3, 
		RULE_funcBlock = 4, RULE_funParams = 5, RULE_expression = 6, RULE_statement = 7, 
		RULE_params = 8, RULE_arguments = 9, RULE_block = 10, RULE_type = 11, 
		RULE_builtInType = 12, RULE_returnType = 13, RULE_structFields = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main", "funDefinition", "varDefinitions", "funcBlock", "funParams", 
			"expression", "statement", "params", "arguments", "block", "type", "builtInType", 
			"returnType", "structFields"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'main'", "'('", "')'", "'{'", "'}'", "','", "';'", "'.'", 
			"'*'", "'/'", "'%'", "'+'", "'-'", "'&&'", "'||'", "'['", "']'", "'!'", 
			"'>'", "'>='", "'=='", "'<='", "'<'", "'!='", "'if'", "'else'", "'='", 
			"'write'", "'read'", "'while'", "'return'", "'struct'", "'char'", "'int'", 
			"'double'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "INT_CONSTANT", "ID", "DOUBLE_CONSTANT", "CHAR_CONSTANT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> definitions = new ArrayList<>();
		public VarDefinitionsContext v1;
		public FunDefinitionContext f1;
		public MainContext m1;
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<VarDefinitionsContext> varDefinitions() {
			return getRuleContexts(VarDefinitionsContext.class);
		}
		public VarDefinitionsContext varDefinitions(int i) {
			return getRuleContext(VarDefinitionsContext.class,i);
		}
		public List<FunDefinitionContext> funDefinition() {
			return getRuleContexts(FunDefinitionContext.class);
		}
		public FunDefinitionContext funDefinition(int i) {
			return getRuleContext(FunDefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(36);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(30);
						((ProgramContext)_localctx).v1 = varDefinitions();
						_localctx.definitions.addAll(((ProgramContext)_localctx).v1.ast);
						}
						break;
					case 2:
						{
						setState(33);
						((ProgramContext)_localctx).f1 = funDefinition();
						_localctx.definitions.add(((ProgramContext)_localctx).f1.ast);
						}
						break;
					}
					} 
				}
				setState(40);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(41);
			((ProgramContext)_localctx).m1 = main();
			setState(42);
			match(EOF);

			            _localctx.definitions.add(((ProgramContext)_localctx).m1.ast);
			            ((ProgramContext)_localctx).ast =  new Program(0, 0, _localctx.definitions);
			          
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public FuncDefinition ast;
		public VoidType t;
		public Token i;
		public Token m;
		public FuncBlockContext fB;
		public FuncBlockContext funcBlock() {
			return getRuleContext(FuncBlockContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			((MainContext)_localctx).i = match(T__0);
			((MainContext)_localctx).t =  new VoidType(((MainContext)_localctx).i.getLine(), ((MainContext)_localctx).i.getCharPositionInLine()+1);
			setState(47);
			((MainContext)_localctx).m = match(T__1);
			setState(48);
			match(T__2);
			setState(49);
			match(T__3);
			setState(50);
			match(T__4);
			setState(51);
			((MainContext)_localctx).fB = funcBlock();
			setState(52);
			match(T__5);
			((MainContext)_localctx).ast =  new FuncDefinition(((MainContext)_localctx).i.getLine(), ((MainContext)_localctx).i.getCharPositionInLine()+1,
			                new FunctionType(((MainContext)_localctx).i.getLine(), ((MainContext)_localctx).i.getCharPositionInLine()+1, _localctx.t, new ArrayList<>()),
			                (((MainContext)_localctx).m!=null?((MainContext)_localctx).m.getText():null),
			                ((MainContext)_localctx).fB.ast.getVarDefinitions(),
			                ((MainContext)_localctx).fB.ast.getStatements()); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunDefinitionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public ReturnTypeContext b1;
		public Token i1;
		public FunParamsContext fP;
		public FuncBlockContext fB;
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public FunParamsContext funParams() {
			return getRuleContext(FunParamsContext.class,0);
		}
		public FuncBlockContext funcBlock() {
			return getRuleContext(FuncBlockContext.class,0);
		}
		public FunDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefinition; }
	}

	public final FunDefinitionContext funDefinition() throws RecognitionException {
		FunDefinitionContext _localctx = new FunDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			((FunDefinitionContext)_localctx).b1 = returnType();
			setState(56);
			((FunDefinitionContext)_localctx).i1 = match(ID);
			setState(57);
			match(T__2);
			setState(58);
			((FunDefinitionContext)_localctx).fP = funParams();
			setState(59);
			match(T__3);
			setState(60);
			match(T__4);
			setState(61);
			((FunDefinitionContext)_localctx).fB = funcBlock();
			setState(62);
			match(T__5);
			((FunDefinitionContext)_localctx).ast =  new FuncDefinition(((FunDefinitionContext)_localctx).b1.ast.getLine(), ((FunDefinitionContext)_localctx).b1.ast.getColumn(),
			                                       new FunctionType(((FunDefinitionContext)_localctx).b1.ast.getLine(), ((FunDefinitionContext)_localctx).b1.ast.getColumn(), ((FunDefinitionContext)_localctx).b1.ast, ((FunDefinitionContext)_localctx).fP.ast),
			                                       (((FunDefinitionContext)_localctx).i1!=null?((FunDefinitionContext)_localctx).i1.getText():null),
			                                       ((FunDefinitionContext)_localctx).fB.ast.getVarDefinitions(),
			                                       ((FunDefinitionContext)_localctx).fB.ast.getStatements()); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefinitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();
		public TypeContext t1;
		public Token i1;
		public Token i2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public VarDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinitions; }
	}

	public final VarDefinitionsContext varDefinitions() throws RecognitionException {
		VarDefinitionsContext _localctx = new VarDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			((VarDefinitionsContext)_localctx).t1 = type(0);
			setState(66);
			((VarDefinitionsContext)_localctx).i1 = match(ID);
			_localctx.ast.add(new VariableDefinition(((VarDefinitionsContext)_localctx).t1.ast.getLine(), ((VarDefinitionsContext)_localctx).t1.ast.getColumn(), ((VarDefinitionsContext)_localctx).t1.ast, (((VarDefinitionsContext)_localctx).i1!=null?((VarDefinitionsContext)_localctx).i1.getText():null)));
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(68);
				match(T__6);
				setState(69);
				((VarDefinitionsContext)_localctx).i2 = match(ID);
				_localctx.ast.add(new VariableDefinition(((VarDefinitionsContext)_localctx).t1.ast.getLine(), ((VarDefinitionsContext)_localctx).t1.ast.getColumn(), ((VarDefinitionsContext)_localctx).t1.ast, (((VarDefinitionsContext)_localctx).i2!=null?((VarDefinitionsContext)_localctx).i2.getText():null)));
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncBlockContext extends ParserRuleContext {
		public StmtVarDfnDTO ast;
		public List<VariableDefinition> variableDefinitions = new ArrayList<>();
		public List<Statement> statements = new ArrayList<>();
		public VarDefinitionsContext v1;
		public StatementContext s1;
		public List<VarDefinitionsContext> varDefinitions() {
			return getRuleContexts(VarDefinitionsContext.class);
		}
		public VarDefinitionsContext varDefinitions(int i) {
			return getRuleContext(VarDefinitionsContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FuncBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcBlock; }
	}

	public final FuncBlockContext funcBlock() throws RecognitionException {
		FuncBlockContext _localctx = new FuncBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 128849018880L) != 0)) {
				{
				{
				setState(78);
				((FuncBlockContext)_localctx).v1 = varDefinitions();

				            for(Definition v: ((FuncBlockContext)_localctx).v1.ast){
				                VariableDefinition var = (VariableDefinition) v;
				                _localctx.variableDefinitions.add(var);
				            }
				          
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2069705015304L) != 0)) {
				{
				{
				setState(86);
				((FuncBlockContext)_localctx).s1 = statement();

				            for(Statement stmt: ((FuncBlockContext)_localctx).s1.ast){
				                _localctx.statements.add(stmt);
				            }
				          
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((FuncBlockContext)_localctx).ast =  new StmtVarDfnDTO(_localctx.variableDefinitions, _localctx.statements);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunParamsContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<>();
		public TypeContext t1;
		public Token i1;
		public TypeContext t2;
		public Token i2;
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public FunParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funParams; }
	}

	public final FunParamsContext funParams() throws RecognitionException {
		FunParamsContext _localctx = new FunParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funParams);
		int _la;
		try {
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__32:
			case T__33:
			case T__34:
			case T__35:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				((FunParamsContext)_localctx).t1 = type(0);
				setState(97);
				((FunParamsContext)_localctx).i1 = match(ID);
				_localctx.ast.add(new VariableDefinition(((FunParamsContext)_localctx).t1.ast.getLine(), ((FunParamsContext)_localctx).t1.ast.getColumn(), ((FunParamsContext)_localctx).t1.ast, (((FunParamsContext)_localctx).i1!=null?((FunParamsContext)_localctx).i1.getText():null)));
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(99);
					match(T__6);
					setState(100);
					((FunParamsContext)_localctx).t2 = type(0);
					setState(101);
					((FunParamsContext)_localctx).i2 = match(ID);
					_localctx.ast.add(new VariableDefinition(((FunParamsContext)_localctx).t2.ast.getLine(), ((FunParamsContext)_localctx).t2.ast.getColumn(), ((FunParamsContext)_localctx).t2.ast, (((FunParamsContext)_localctx).i2!=null?((FunParamsContext)_localctx).i2.getText():null)));
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Expression ast;
		public ExpressionContext e1;
		public Token ID;
		public Token i;
		public Token d;
		public Token c;
		public Token op;
		public ArgumentsContext arguments;
		public Token lp;
		public BuiltInTypeContext t1;
		public ExpressionContext e2;
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public TerminalNode INT_CONSTANT() { return getToken(CmmParser.INT_CONSTANT, 0); }
		public TerminalNode DOUBLE_CONSTANT() { return getToken(CmmParser.DOUBLE_CONSTANT, 0); }
		public TerminalNode CHAR_CONSTANT() { return getToken(CmmParser.CHAR_CONSTANT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public BuiltInTypeContext builtInType() {
			return getRuleContext(BuiltInTypeContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}
